--- a/portfolio.html
+++ b/portfolio.html
@@ -53,68 +53,86 @@
                 </ul>
                 <!-- Наши проекты --> 
                 <ul class="filter">
-                    <li class="filter-item">
-                         <img class="imgprtf" src="./images/portfolio/nout.jpg" alt="Веб-сайты" Width="370" Height="294">
-                        <div class="card"> 
-                            <h2 class="project">Технокряк</h3>
-                            <p class="desc">Веб-сайт</p>
-                        </div>
+                    <li class="filter-item"> 
+                        <a class="card-project" href="">
+                            <img class="imgprtf" src="./images/portfolio/nout.jpg" alt="Веб-сайты" Width="370" Height="294">
+                            <div class="card"> 
+                                <h2 class="project">Технокряк</h3>
+                                <p class="desc">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/basket.jpg" alt="Дизайн" Width="370" Height="294">
-                        <div class="card">
-                            <h2 class="project">Постер New Orlean vs Golden Star</h3>
-                            <p class="desc">Дизайн</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/basket.jpg" alt="Дизайн" Width="370" Height="294">
+                            <div class="card">
+                                <h2 class="project">Постер New Orlean vs Golden Star</h3>
+                                <p class="desc">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                         <img src="./images/portfolio/seefood.jpg" alt="Приложение" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Ресторан Seafood</h3>
-                            <p class="desc">Приложение</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/seefood.jpg" alt="Приложение" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Ресторан Seafood</h3>
+                                <p class="desc">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                            <img src="./images/portfolio/usch.jpg" alt="Маркетинг" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Проект Prime</h3>
-                            <p class="desc">Маркетинг</p>
-                        </div>
+                        <a class="card-project" href="">
+                                <img src="./images/portfolio/usch.jpg" alt="Маркетинг" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Проект Prime</h3>
+                                <p class="desc">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/box.jpg" alt="Приложение" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Проект Boxes</h3>
-                            <p class="desc">Приложение</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/box.jpg" alt="Приложение" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Проект Boxes</h3>
+                                <p class="desc">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/monik.jpg" alt="Веб-сайт" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Inspiration has no Borders</h3>
-                            <p class="desc">Веб-сайт</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/monik.jpg" alt="Веб-сайт" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Inspiration has no Borders</h3>
+                                <p class="desc">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/book.jpg" alt="Дизайн" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Издание Limited Edition</h3>
-                            <p class="desc">Дизайн</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/book.jpg" alt="Дизайн" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Издание Limited Edition</h3>
+                                <p class="desc">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/pr.jpg" alt="Маркетинг" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Проект LAB</h3>
-                            <p class="desc">Маркетинг</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/pr.jpg" alt="Маркетинг" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Проект LAB</h3>
+                                <p class="desc">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="filter-item">
-                        <img src="./images/portfolio/nout.jpg" alt="Приложение" width="370" height="294">
-                        <div class="card">
-                            <h2 class="project">Growing Business</h3>
-                            <p class="desc">Приложение</p>
-                        </div>
+                        <a class="card-project" href="">
+                            <img src="./images/portfolio/nout.jpg" alt="Приложение" width="370" height="294">
+                            <div class="card">
+                                <h2 class="project">Growing Business</h3>
+                                <p class="desc">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
