--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <!--Главная страница-->
         <main>
-            <section class="hero">
+            <section class="hero overlay">
                 <div class="container">
                     <div class="hero-content">
                         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
@@ -113,6 +113,23 @@
                     </li>
                 </ul>
              </div>
+            </section>
+            <section class="section clients">
+                <div class="container">
+                    <h2 class="title">Постоянные клиенты</h2>
+                    <ul class="clients-list">
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon yaco-icon">
+                                    <use href=""></use>
+                                </svg>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+
+
             </section>
         </main>
         <!--Подвал-->
