--- a/index.html
+++ b/index.html
@@ -45,18 +45,30 @@
                    <h2 class="visually-hidden">О нас</h2> <!--скроем-->
                     <ul class="visually">
                         <li class="visually-title">
+                            <svg class="visually-icon">
+                                <use class="icon-icon" href="./images/symbol-defs.svg#Group" width="70" height="70"></use>
+                            </svg>
                             <h3 class="subtitle">Внимание к деталям</h3>
                             <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="visually-title">
+                            <svg class="visually-icon">
+                                <use clas="icon" href="./images/symbol-defs.svg#clock" width="70" height="70"></use>
+                            </svg>
                             <h3 class="subtitle">Пунктуальность</h3>
                             <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li class="visually-title">
+                            <svg class="visually-icon">
+                                <use clas="icon" href="./images/symbol-defs.svg#diagram-1" width="70" height="70"></use>
+                            </svg>
                             <h3 class="subtitle">Планирование</h3>
                             <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="visually-title">
+                            <svg class="visually-icon">
+                                <use clas="icon" href="./images/symbol-defs.svg#astronaut-1" width="70" height="70"></use>
+                            </svg>
                             <h3 class="subtitle">Современные технологии</h3>
                             <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -84,28 +96,42 @@
                 <h2 class="title">Наша команда</h2>
                 <ul class="title-list grid">
                     <li class="grid-title grid-team">
-                        <img src="./images/m3s.jpg" alt="Игорь Демьяненко Продакт-дизайнер" Width="270" Height="260">
+                        <img src="./images/m3s.jpg" alt="Игорь Демьяненко Продакт-дизайнер" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Игорь Демьяненко</h3>
                             <p class="title-responsibilities" lang="en">Product Designer</p>
+                            <a href="" class="social">
+                                <svg class="social-icon">
+                                    <use clas="" href="./images/symbol-defs.svg#instagram" width="20" height="20"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use clas="" href="./images/symbol-defs.svg#twitter" width="20" height="20"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use clas="" href="./images/symbol-defs.svg#facebook" width="20" height="20"></use>
+                                </svg>
+                                <svg class="social-icon">
+                                    <use clas="" href="./images/symbol-defs.svg#linkedin" width="20" height="20"></use>
+                                </svg>
+                            </a>
                         </div>
                     </li>
                     <li class="grid-title grid-team">
-                        <img src="./images/ws.jpg" alt="Ольга Репина Фронтенд-разработчик" Width="270" Height="260">
+                        <img src="./images/ws.jpg" alt="Ольга Репина Фронтенд-разработчик" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Ольга Репина</h3>
                             <p class="title-responsibilities" lang="en">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="grid-title grid-team">
-                        <img src="./images/ms.jpg" alt="Николай Тарасов Маркетинг" Width="270" Height="260">
+                        <img src="./images/ms.jpg" alt="Николай Тарасов Маркетинг" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Николай Тарасов</h3>
                             <p class="title-responsibilities" lang="en">Marketing</p>
                         </div>
                     </li>
                     <li class="grid-title grid-team">
-                        <img src="./images/m2s.jpg" alt="Михаил Ермаков Веб-дизайн" Width="270" Height="260">
+                        <img src="./images/m2s.jpg" alt="Михаил Ермаков Веб-дизайн" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Михаил Ермаков</h3>
                             <p class="title-responsibilities" lang="en">UI Designer</p>
@@ -120,8 +146,43 @@
                     <ul class="clients-list">
                         <li class="clients-item">
                             <a href="" class="clients-link">
-                                <svg class="clients-icon yaco-icon">
-                                    <use href=""></use>
+                                <svg class="clients-icon" width="44,27" height="49.23">
+                                    <use href="./images/symbol-defs.svg#logo-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon" width="40" height="52">
+                                    <use href="./images/symbol-defs.svg#logo-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon" width="41" height="42.6">
+                                    <use href="./images/symbol-defs.svg#logo-3"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon" width="79.66" height="42.02">
+                                    <use href="./images/symbol-defs.svg#logo-4"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon" width="59" height="47">
+                                    <use href="./images/symbol-defs.svg#logo-5"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="clients-item">
+                            <a href="" class="clients-link">
+                                <svg class="clients-icon" width="88.48" height="45.44">
+                                    <use href="./images/symbol-defs.svg#logo-6"></use>
                                 </svg>
                             </a>
                         </li>
