--- a/index.html
+++ b/index.html
@@ -45,30 +45,38 @@
                    <h2 class="visually-hidden">О нас</h2> <!--скроем-->
                     <ul class="visually">
                         <li class="visually-title">
-                            <svg class="visually-icon">
-                                <use class="icon-icon" href="./images/symbol-defs.svg#Group" width="70" height="70"></use>
-                            </svg>
+                            <div class="vis">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#Group"></use>
+                                </svg>
+                            </div>
                             <h3 class="subtitle">Внимание к деталям</h3>
                             <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li class="visually-title">
-                            <svg class="visually-icon">
-                                <use clas="icon" href="./images/symbol-defs.svg#clock" width="70" height="70"></use>
-                            </svg>
+                            <div class="vis">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#clock"></use>
+                                </svg>
+                            </div>
                             <h3 class="subtitle">Пунктуальность</h3>
                             <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li class="visually-title">
-                            <svg class="visually-icon">
-                                <use clas="icon" href="./images/symbol-defs.svg#diagram-1" width="70" height="70"></use>
-                            </svg>
+                            <div class="vis">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#diagram-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="subtitle">Планирование</h3>
                             <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li class="visually-title">
-                            <svg class="visually-icon">
-                                <use clas="icon" href="./images/symbol-defs.svg#astronaut-1" width="70" height="70"></use>
-                            </svg>
+                            <div class="vis">
+                                <svg width="70" height="70">
+                                    <use href="./images/symbol-defs.svg#astronaut-1"></use>
+                                </svg>
+                            </div>
                             <h3 class="subtitle">Современные технологии</h3>
                             <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
@@ -100,21 +108,28 @@
                         <div class="signature-team">
                             <h3 class="title-team">Игорь Демьяненко</h3>
                             <p class="title-responsibilities" lang="en">Product Designer</p>
-                            <a href="" class="social">
-                                <svg class="social-icon">
-                                    <use clas="" href="./images/symbol-defs.svg#instagram" width="20" height="20"></use>
+                            <a href="">
+                                <svg width="44" height="44">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg>
-                                <svg class="social-icon">
-                                    <use clas="" href="./images/symbol-defs.svg#twitter" width="20" height="20"></use>
+                            </a>
+                            <a href="">
+                                <svg width="44" height="44">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg>
-                                <svg class="social-icon">
-                                    <use clas="" href="./images/symbol-defs.svg#facebook" width="20" height="20"></use>
+                            </a>
+                            <a href="">
+                                <svg width="44" height="44">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg>
-                                <svg class="social-icon">
-                                    <use clas="" href="./images/symbol-defs.svg#linkedin" width="20" height="20"></use>
+                            </a>
+                            <a href="">
+                                <svg width="44" height="44">
+                                    <use href="./images/symbol-defs.svg#instagram"></use>
                                 </svg>
                             </a>
                         </div>
+                        
                     </li>
                     <li class="grid-title grid-team">
                         <img src="./images/ws.jpg" alt="Ольга Репина Фронтенд-разработчик" width="270" height="260">
@@ -134,7 +149,7 @@
                         <img src="./images/m2s.jpg" alt="Михаил Ермаков Веб-дизайн" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Михаил Ермаков</h3>
-                            <p class="title-responsibilities" lang="en">UI Designer</p>
+                            <p class="title-responsibilities" lang="en">UI Designer</p>    
                         </div>
                     </li>
                 </ul>
