--- a/index.html
+++ b/index.html
@@ -108,26 +108,36 @@
                         <div class="signature-team">
                             <h3 class="title-team">Игорь Демьяненко</h3>
                             <p class="title-responsibilities" lang="en">Product Designer</p>
-                            <a href="">
-                                <svg width="44" height="44">
-                                    <use href="./images/symbol-defs.svg#instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="">
-                                <svg width="44" height="44">
-                                    <use href="./images/symbol-defs.svg#instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="">
-                                <svg width="44" height="44">
-                                    <use href="./images/symbol-defs.svg#instagram"></use>
-                                </svg>
-                            </a>
-                            <a href="">
-                                <svg width="44" height="44">
-                                    <use href="./images/symbol-defs.svg#instagram"></use>
-                                </svg>
-                            </a>
+                            <ul class="social">
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         
                     </li>
@@ -136,6 +146,36 @@
                         <div class="signature-team">
                             <h3 class="title-team">Ольга Репина</h3>
                             <p class="title-responsibilities" lang="en">Frontend Developer</p>
+                            <ul class="social">
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="grid-title grid-team">
@@ -143,13 +183,73 @@
                         <div class="signature-team">
                             <h3 class="title-team">Николай Тарасов</h3>
                             <p class="title-responsibilities" lang="en">Marketing</p>
+                            <ul class="social">
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="grid-title grid-team">
                         <img src="./images/m2s.jpg" alt="Михаил Ермаков Веб-дизайн" width="270" height="260">
                         <div class="signature-team">
                             <h3 class="title-team">Михаил Ермаков</h3>
-                            <p class="title-responsibilities" lang="en">UI Designer</p>    
+                            <p class="title-responsibilities" lang="en">UI Designer</p>
+                            <ul class="social">
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="" class="social-icon">
+                                        <svg width="20" height="20">
+                                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
