--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,22 @@
                     <li class="site-link"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="com-nav">
-                <li class="site-item"><a class="item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="site-item"><a class="item" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="site-nav">
+                <li class="site-link">
+                    <a class="contact-link" lang="en" href="mailto:info@devstudio.com">
+                        <svg class="icon" width="16" height="12">
+                            <use href="./images/symbol-defs.svg#iconmail"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="site-link">
+                    <a class="contact-link" href="tel:+380961111111">
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/symbol-defs.svg#iconsmartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
@@ -142,16 +155,52 @@
 
     <!--Подвал-->
 <footer class="page-footer">
-   <div class="container footer">
-        <a href="/"><span class="web">Web</span><span class="studio-white">Studio</span></a>
-        <address class="address">
-            <ul class="find-us">
-                <li><a class="address" href="gps">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <div class="container footer">
+        <div class="footer-contact">
+            <a href="/"><span class="web">Web</span><span class="studio-white">Studio</span></a>
+            <address class="address">
+                <ul class="find-us">
+                    <li><a class="address" href="gps">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
+        <div class="footer-social-list">
+            <h3 class="footer-social-title">присоединяйтесь</h3>
+            <ul class="footer-social-icons">
+                <li class="footer-social-icons-item">
+                    <a href="" class="footer-social-icons-link" aria-label="инстаграм">
+                        <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-icons-item">
+                    <a href="" class="footer-social-icons-link" aria-label="твиттер">
+                        <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-icons-item">
+                    <a href="" class="footer-social-icons-link" aria-label="фейсбук">
+                        <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-icons-item">
+                    <a href="" class="footer-social-icons-link" aria-label="линкедин">
+                        <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
             </ul>
-        </address>
-   </div>
+
+        </div>
+    </div>
 </footer>
 </body>
 </html>
