--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
         <footer class="page-footer">
             <div class="container footer">
                 <div class="footer-contact">
-                    <a href="/"><span class="web">Web</span><span class="studio-white">Studio</span></a>
+                    <a class="footer-link" href="/"><span class="web-footer">Web</span><span class="studio-white">Studio</span></a>
                     <address class="address">
                         <ul class="find-us">
-                            <li><a class="address" href="gps">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                            <li class="address"><a class="address" href="gps">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="address"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class=""><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                         </ul>
                     </address>
                 </div>
