--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
 <footer class="page-footer">
     <div class="container footer">
         <div class="footer-contact">
-            <a href="/"><span class="web">Web</span><span class="studio-white">Studio</span></a>
+            <a href="/"><span class="web-footer">Web</span><span class="studio-white">Studio</span></a>
             <address class="address">
                 <ul class="find-us">
                     <li><a class="address" href="gps">г. Киев, пр-т Леси Украинки, 26</a></li>
